# ziip

./: .gitignore  Board.cpp  Board.hpp  CMakeLists.txt  InputMgr.cpp  InputMgr.hpp  Main.cpp  Main.hpp  Makefile  Makefile.linux  Makefile.wii  Player.cpp  Player.hpp  README  Resources.cpp  Resources.hpp  Row.cpp  Row.hpp  SharedData.cpp  SharedData.hpp  TODO  Timer.cpp  Timer.hpp  design  index.md  meta.xml
cmake/: FindSDL.cmake  FindSDL_gfx.cmake  toolchain-powerpc-eabi.cmake
data/: bg01.xcf
scripts/: basicBot.lua  randBot.lua
src/: Board.cpp  Board.hpp  Config.cpp  Config.hpp  HiScore.cpp  HiScore.hpp  InputMgr.cpp  InputMgr.hpp  LuaIface.cpp  LuaIface.hpp  Main.cpp  Main.hpp  Menu.cpp  Menu.hpp  Net.cpp  Net.hpp  Player.cpp  Player.hpp  Resources.cpp  Resources.hpp  Row.cpp  Row.hpp  SharedData.cpp  SharedData.hpp  SharedData.hpp.in  Timer.cpp  Timer.hpp
